# mcp-marketplace

./: .gitignore
mcp-feedback-lite/: .gitignore  README.md  pyproject.toml
mcp-feedback-lite/.cursor/rules/: mcp-feedback-loop.mdc
mcp-feedback-lite/mcp_feedback_lite/: __main__.py  dialog.py  server.py
mcp-feedback-lite/src/: __main__.py  server.py
mcp-feedback-lite/src/mcp_feedback_lite/: __init__.py
